--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
         "url": "git+https://github.com/yourockit/my-course-js-hw-11.git"
     },
     "keywords": [],
-    "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+    "author": "YourockIT",
     "license": "ISC",
     "bugs": {
-        "url": "https://github.com/goitacademy/parcel-project-template/issues"
+        "url": "https://github.com/"
     },
     "dependencies": {
         "axios": "^1.3.3",
